first TypeInfo object created